--- a/css/style.css
+++ b/css/style.css
@@ -4140,6 +4140,18 @@ input[type="button"].btn-block {
  
 
 }
+@media (max-width: 991px) {
+  h1.ailen {
+    font-size: 10rem; /* Tamaño más pequeño */
+  }
+}
+
+/* Ajuste para pantallas pequeñas (celulares, menos de 768px) */
+@media (max-width: 767px) {
+  h1.ailen {
+    font-size: 2rem; /* Aún más pequeño */
+  }
+}
 .logo{
 
   max-width: 12%;
@@ -4204,8 +4216,9 @@ color: #000;
 }
 
 .navbar-nav .dropdown-menu {
-  position: static;
-  float: none;
+  position: absolute;
+  right: 0; /* Asegura que se abra desde la derecha */
+  left: auto;
 }
 
 .navbar-text {
@@ -4218,64 +4231,50 @@ color: #000;
   flex-basis: 100%;
   flex-grow: 1;
   align-items: center;
+  justify-content: flex-end; /* Alinea el menú a la derecha */
+  
 }
 
 .navbar-toggler {
   padding: 0.25rem 0.75rem;
   font-size: 1.25rem;
   line-height: 1;
-  background-color: transparent;
+  background-color: #ffffff;
   border: 1px solid transparent;
   border-radius: 0.25rem;
 }
+
+.navbar-toggler-icon {
+  font-size: 1em; /* Ajusta el tamaño según sea necesario */
+  color: #f645b5; /* Cambia el color si es necesario */
+}
+
 
 .navbar-toggler:hover, .navbar-toggler:focus {
   text-decoration: none;
 }
 
-.navbar-toggler-icon {
-  display: inline-block;
-  width: 1.5em;
-  height: 1.5em;
-  vertical-align: middle;
-  content: "";
-  background: no-repeat center center;
-  background-size: 100% 100%;
-}
 
 @media (max-width: 575.98px) {
-  .navbar-expand-sm > .container,
-  .navbar-expand-sm > .container-fluid, .navbar-expand-sm > .container-sm, .navbar-expand-sm > .container-md, .navbar-expand-sm > .container-lg, .navbar-expand-sm > .container-xl {
-    padding-right: 0;
-    padding-left: 0;
+  /* Alinear el icono del menú (navbar-toggler) a la derecha y moverlo más arriba */
+  .navbar-toggler {
+    margin-left: auto;
+    margin-right: 0;
+    position: relative;
+    top: -30px; /* Ajusta este valor para moverlo más arriba */
   }
-}
 
-@media (min-width: 576px) {
-  .navbar-expand-sm {
-    flex-flow: row nowrap;
-    justify-content: flex-start;
+  /* Alinear el menú desplegable a la derecha cuando se expande */
+  .navbar-collapse {
+    justify-content: flex-end; /* Mueve el menú desplegable hacia la derecha */
   }
-  .navbar-expand-sm .navbar-nav {
-    flex-direction: row;
-  }
-  .navbar-expand-sm .navbar-nav .dropdown-menu {
+
+  /* Asegurar que el dropdown se abra a la derecha */
+  .navbar-nav .dropdown-menu {
     position: absolute;
-  }
-  .navbar-expand-sm .navbar-nav .nav-link {
-    padding-right: 0.5rem;
-    padding-left: 0.5rem;
-  }
-  .navbar-expand-sm > .container,
-  .navbar-expand-sm > .container-fluid, .navbar-expand-sm > .container-sm, .navbar-expand-sm > .container-md, .navbar-expand-sm > .container-lg, .navbar-expand-sm > .container-xl {
-    flex-wrap: nowrap;
-  }
-  .navbar-expand-sm .navbar-collapse {
-    display: flex !important;
-    flex-basis: auto;
-  }
-  .navbar-expand-sm .navbar-toggler {
-    display: none;
+    right: 0; /* Asegura que se abra desde el borde derecho */
+    left: auto; /* Evita que se abra del lado izquierdo */
+    text-align: right; /* Alinea los elementos dentro del menú a la derecha */
   }
 }
 
@@ -10048,4 +10047,10 @@ h6,
   margin: 0;
   padding: 0;
   list-style-type: none;
+}
+@media (max-width: 768px) {
+  /* Ocultar la imagen en dispositivos móviles */
+  .col-lg-4 {
+    display: none;
+  }
 }
